<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.FCastSenderSDK"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_casting_device" />

        <TextView
            android:id="@+id/button_tutorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:padding="8dp"
            android:text="Help" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:singleLine="true"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:singleLine="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorError"
        android:layout_marginTop="5dp"
        android:text="@string/error_message_here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="28dp" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>
