<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.FCastSenderSDK"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_to"
            android:layout_marginStart="20dp" />

        <!--
        <ImageView
            android:id="@+id/image_loader"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_loader_animated"
            android:layout_marginStart="5dp"/>
        -->


        <Space android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/close" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:layout_marginTop="8dp"
        android:focusable="true">

        <ImageView
            android:id="@+id/image_device"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/cd_image_device"
            app:srcCompat="@drawable/ic_chromecast"
            android:scaleType="fitCenter"
            app:tint="?android:attr/textColorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="SHIELD TV"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@id/image_device"
            app:layout_constraintLeft_toRightOf="@id/image_device" />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="Chromecast"
            android:includeFontPadding="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            app:layout_constraintLeft_toRightOf="@id/image_device" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_volume_adjustable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/volume" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_volume"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:value="0.2"
            android:valueFrom="0"
            android:valueTo="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_position_adjustable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text_position"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/position" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_position"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:value="0.2"
            android:valueFrom="0"
            android:valueTo="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@drawable/divider_transparent_8dp"
        android:showDividers="middle"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cd_button_play"
            android:focusable="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:background="@android:color/transparent"
            app:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_play_white_nopad" />

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cd_button_pause"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:background="@android:color/transparent"
            app:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_pause_white" />

        <ImageButton
            android:id="@+id/button_stop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cd_button_stop"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:padding="5dp"
            android:clickable="true"
            android:background="@android:color/transparent"
            app:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_stop_notif" />
    </LinearLayout>

    <!--
    <LinearLayout
        android:id="@+id/layout_volume_fixed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="15dp">
    </LinearLayout>
    -->

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/stop_casting" />
</LinearLayout>
